--- a/vuichoi.html
+++ b/vuichoi.html
@@ -64,7 +64,8 @@
     <script src="script.js"></script>
     <script>
       if (window.VUICHOI_IMAGES)
-        initGallery(window.VUICHOI_IMAGES, "data/IMG/VuiChoi/");
+        initGallery(window.VUICHOI_IMAGES, "data/IMG/Vuichoi/");
+
     </script>
   </body>
 </html>
